--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body {
   font-family: 'Nunito', sans-serif;
   font-weight: 400;
   height: 100vh;
-  color: #333;
-  background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
+  color: #161414;
+  background-image: linear-gradient(to top left, #753682 15%, #7ae359 85%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,8 +25,8 @@ body {
 /* LAYOUT */
 main {
   position: relative;
-  width: 100rem;
-  height: 60rem;
+  width: 120rem;
+  height: 70rem;
   background-color: rgba(255, 255, 255, 0.35);
   backdrop-filter: blur(200px);
   filter: blur();
@@ -59,7 +59,7 @@ main {
 .score {
   font-size: 8rem;
   font-weight: 300;
-  color: #c7365f;
+  color: #dd154e;
   margin-bottom: auto;
 }
 
@@ -78,7 +78,7 @@ main {
 }
 
 .current {
-  background-color: #c7365f;
+  background-color: #dd154e;
   opacity: 0.8;
   border-radius: 9px;
   color: #fff;
@@ -92,7 +92,7 @@ main {
   text-transform: uppercase;
   margin-bottom: 1rem;
   font-size: 1.7rem;
-  color: #ddd;
+  color: #dddddd;
 }
 
 .current-score {
@@ -114,7 +114,7 @@ main {
   font-weight: 400;
   transition: all 0.2s;
 
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
 
